--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
 		</ul>
 	</header>
 	<div class="wrapper">
-		<section class="">
-			<!-- <h2>Hi, I'm Wendy</h2> -->
-		</section>
 		<section class="About">
 			<div class="titleBox">About</div>
 			<div class="profileBox">
@@ -60,7 +57,7 @@
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In obcaecati sed modi ea atque perspiciatis explicabo facilis aliquam quia ipsum cum necessitatibus blanditiis, vero suscipit itaque praesentium repudiandae nihil doloribus!</p>
 			</div>
 			<div class="skillBox">
-				<p class="font700">技能</p>
+				<h6 class="font700">技能</h6>
 				<div class="item clearfix">
 					<div class="skilltype">排版設計</div>
 					<ul>
@@ -100,8 +97,107 @@
 		</section>
 		<section class="Design">
 			<div class="titleBox">Design</div>
-			<ul>
-				<li></li>
+			<ul class="sliderWall">
+				<li>
+					<h6 class="font700">旅遊類</h6>
+					<div class="sliderBox">
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+					</div>
+				</li>
+				<li>
+					<h6 class="font700">流行類</h6>
+					<div class="sliderBox">
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+					</div>
+				</li>
+				<li>
+					<h6 class="font700">生活類</h6>
+					<div class="sliderBox">
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+					</div>
+				</li>
+				<li>
+					<h6 class="font700">行銷類</h6>
+					<div class="sliderBox">
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/example.jpg" alt="">
+							</a>
+						</div>
+					</div>
+				</li>
 			</ul>
 		</section>
 	</div>
@@ -114,13 +210,12 @@
 		
 		$(".imgLiquidFill").imgLiquid();
 
-		$('.slider').slick({
+		$('.sliderBox').slick({
 			infinite: true,
 			autoplay: true,
-			slidesToShow: 1,
+			slidesToShow: 3,
 			slidesToScroll: 1,
-			// centerMode: true,
-			arrows: false,
+			arrows: true,
 			dots: true
 		});
 
