--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="Resource-type" content="" />
 	<!-- css -->
 	<link rel="stylesheet" type="text/css" href="css/reset.css" />
+	<link rel="stylesheet" type="text/css" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
 	<link rel="stylesheet" type="text/css" href="css/slick.css" />
 	<link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
 	<link rel="stylesheet" type="text/css" href="css/animate.min.css" />
@@ -24,6 +25,7 @@
 	<![endif]-->
 
 	<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+	<script type="text/javascript" src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 	<script type="text/javascript" src="js/wow.min.js"></script>
 	<script type="text/javascript" src="js/slick.js"></script>
 	<script type="text/javascript" src="js/imgLiquid-min.js"></script>
@@ -100,100 +102,332 @@
 			<ul class="sliderWall">
 				<li>
 					<h6 class="font700">旅遊類</h6>
-					<div class="sliderBox">
+					<div class="sliderBox sliderBox3">
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/travel_01.jpg" alt="">
 							</a>
 						</div>
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/travel_02.jpg" alt="">
 							</a>
 						</div>
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/travel_03.jpg" alt="">
 							</a>
 						</div>
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/travel_04.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="">
+								<img src="img/travel_05.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="">
+								<img src="img/travel_06.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="">
+								<img src="img/travel_07.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="">
+								<img src="img/travel_08.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="">
+								<img src="img/travel_09.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="">
+								<img src="img/travel_10.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="">
+								<img src="img/travel_11.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="">
+								<img src="img/travel_12.jpg" alt="">
+							</a>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="sliderBox sliderBox3">
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_25.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_13.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_14.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_15.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_16.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_17.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_18.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_19.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_20.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_21.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_22.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_23.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/travel_24.jpg" alt="">
 							</a>
 						</div>
 					</div>
 				</li>
 				<li>
 					<h6 class="font700">流行類</h6>
-					<div class="sliderBox">
+					<div class="sliderBox sliderBox3">
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/fashion_01.jpg" alt="">
 							</a>
 						</div>
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/fashion_02.jpg" alt="">
 							</a>
 						</div>
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/fashion_03.jpg" alt="">
 							</a>
 						</div>
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/fashion_04.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/fashion_05.jpg" alt="">
+							</a>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="sliderBox sliderBox3">
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/fashion_06.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/fashion_07.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/fashion_08.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/fashion_09.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/fashion_10.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/fashion_11.jpg" alt="">
 							</a>
 						</div>
 					</div>
 				</li>
 				<li>
 					<h6 class="font700">生活類</h6>
-					<div class="sliderBox">
+					<div class="sliderBox sliderBox3">
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/life_01.jpg" alt="">
 							</a>
 						</div>
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/life_02.jpg" alt="">
 							</a>
 						</div>
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/life_03.jpg" alt="">
 							</a>
 						</div>
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/life_04.jpg" alt="">
+							</a>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="sliderBox sliderBox3">
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/life_05.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/life_06.jpg" alt="">
 							</a>
 						</div>
 					</div>
 				</li>
 				<li>
 					<h6 class="font700">行銷類</h6>
-					<div class="sliderBox">
+					<div class="sliderBox sliderBox3">
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/mkt_01.jpg" alt="">
 							</a>
 						</div>
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/mkt_02.jpg" alt="">
 							</a>
 						</div>
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/mkt_03.jpg" alt="">
 							</a>
 						</div>
 						<div class="slider_item">
 							<a href="#">
-								<img src="img/example.jpg" alt="">
+								<img src="img/mkt_04.jpg" alt="">
+							</a>
+						</div>
+					</div>
+				</li>
+			</ul>
+		</section>
+		<section class="Design">
+			<div class="titleBox">Website</div>
+			<ul class="sliderWall">
+				<li>
+					<h6 class="font700">企業網站</h6>
+					<div class="sliderBox sliderBox3">
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/website_01.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/website_02.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/website_03.jpg" alt="">
+							</a>
+						</div>
+					</div>
+				</li>
+				<li>
+					<h6 class="font700">一頁式網站</h6>
+					<div class="sliderBox sliderBox4">
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/onepage_01.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/onepage_02.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/onepage_03.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/onepage_04.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/onepage_05.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/onepage_06.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/onepage_07.jpg" alt="">
+							</a>
+						</div>
+						<div class="slider_item">
+							<a href="#">
+								<img src="img/onepage_08.jpg" alt="">
 							</a>
 						</div>
 					</div>
@@ -210,10 +444,18 @@
 		
 		$(".imgLiquidFill").imgLiquid();
 
-		$('.sliderBox').slick({
+		$('.sliderBox3').slick({
 			infinite: true,
 			autoplay: true,
 			slidesToShow: 3,
+			slidesToScroll: 1,
+			arrows: true,
+			dots: true
+		});
+		$('.sliderBox4').slick({
+			infinite: true,
+			autoplay: true,
+			slidesToShow: 4,
 			slidesToScroll: 1,
 			arrows: true,
 			dots: true
